# BitCraftMap_With_Empire

./: .gitignore  README.md  pyproject.toml  requirements.txt  要件.md
.github/workflows/: daily-update.yml  update-gist-on-geojson-change.yml
Resource/: color_map.yaml  generated.geojson  generated_all.geojson  grids.geojson
Sample/: converter.mjs  grids copy 2.jsonc  sample.geojson  地図から取った色.yaml  変換表.yaml
scripts/: color_converter.py  color_store.py  coords.py  generate_geojson.py  generator_core.py
