[project]
requires-python = ">=3.10"
name = "BitCraftMap_With_Empire"
version = "0.0.1"
dependencies = [
    "pyyaml>=6.0.3",
    "requests>=2.0",
    "shapely>=2.0",
    "pyperclip>=1.8.2",
]

[project.scripts]
generate = "scripts.generate_geojson:main"
color = "scripts.color_converter:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]

[tool.uv]
package = true
